Add way to delete specific datasets (#20)
* add printDataEnumerated method

* add deleteDataset method

* add test for new delete method

* refactor tests

* refactor collector